add GUI version (LTS)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 icalendar==6.3.1
 numpy==2.3.2
+openpyxl
 pandas==2.3.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
+tkinterdnd2
 tzdata==2025.2
